2004-04-22  Robert Davis <rdavis@unico.com>

	* providers/freetds/gda-freetds-provider.c
	(gda_freetds_provider_open_connection): use tds_set_client_charset
	instead of tds_set_charset.

2004-04-18  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.0.4.

2004-04-18  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #139800

	* providers/freetds/gda-freetds-provider.c (gda_freetds_execute_cmd):
	* providers/freetds/gda-freetds-recordset.c (gda_freetds_recordset_new):
	updated to latest FreeTDS 0.62 API.

2004-04-16  Denis Loginov <dloginov@crl.nmsu.edu>

	* providers/postgres/gda-postgres-provider.c (gda_postgres_fill_md_data):
	Fixed the "Not Null?" columns, so that it indeed returns the "Not null"
	and not its inverse.

2004-04-15  Benjamin Otte <in7y118@public.uni-hamburg.de>

	Fixes #140113

	* providers/sqlite/gda-sqlite-provider.c (sql_split): new function to
	correctly split multiple SQL commands.
	(process_sql_commands): use the new function instead of g_strsplit.

2004-04-08  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda.spec.in: s/default/xml.

2004-04-02  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-10  Mohammad DAMT  <mdamt@Bisnisweb.com>

	* configure.in: Added id to ALL_LINGUAS
	* po/id.po: Added Indonesian Translation by Arief Mulya Utama 
	<arief_mulya@yahoo.com>

2004-02-25  Laurent Sansonetti <lrz@gnome.org>

	Fixes #132216

	* libgda/gda-client.c (gda_client_open_connection_from_string): Reuses
	existing connections by looking in the opened connections pool.

	* libgda/gda-client.c (gda_client_open_connection): Fixed a memory leak.

	Fixes #129560
	
	* libgda/gda-config.c (gda_config_set_string, gda_config_set_int,
	gda_config_set_float, gda_config_set_boolean): Changes the type of the key
	if already existing.

2004-01-28  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #131592
